<resources>
    <string name="app_name">Eventsync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here.</string>
    <string name="appbar_scrolling_view_behavior">Behavior</string>
    <string name="title_activity_navigation">Dashboard</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="logout">Logout</string>
    <string name="next_days">Next Days</string>
    <string name="add_note">Add Note</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="dashboard">Dashboard</string>
    <string name="calendar">Calendar</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="add_event">Add Event</string>
    <string name="friends">Friends</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="name">Name</string>
    <string name="communicate">Communicate</string>
    <string name="user_name">User name</string>
    <string name="user_status">User Status</string>
    <string name="upload_photo">Upload photo</string>
    <string name="view_events">View Events</string>
    <string name="do_you_really_want_to_log_out">Do you really want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="add_friend">Add friend</string>
    <string name="add">Add</string>
    <string name="choose_friend">Choose friend</string>
    <string name="match_friend">Match Friend</string>
    <string name="choose_a_friend">Choose a friend</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="please_enter_the_email">Please enter the email…</string>
    <string name="send_recovery_token">Send Recovery Token</string>
    <string name="please_enter_the_code">Please enter the code</string>
    <string name="check">Check</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="done">Done</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="check_your_email_for_code">Check your email for code</string>
    <string name="delete">Delete</string>
    <string name="delete_event">Delete Event</string>
    <string name="eventsync">EVENTSYNC</string>
    <string name="no_events_yet">No events yet!</string>
</resources>
