<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_action_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_add_profile_photo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_profile_photo" />
        <item
            android:id="@+id/nav_add_note"
            android:icon="@drawable/ic_action_note_add"
            android:title="@string/add_note" />
        <item
            android:id="@+id/nav_next_days"
            android:icon="@drawable/ic_action_next_days"
            android:title="@string/next_days" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_action_friends"
            android:title="@string/friends"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_menu_share" />

        </menu>
    </item>

</menu>
