<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/add_note"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/add_note_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/add_note_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_note_name"
        android:inputType="textPersonName"
        android:hint="@string/start_date" />

    <EditText
        android:id="@+id/add_note_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_note_start_date"
        android:inputType="textPersonName"
        android:hint="@string/end_date" />

    <EditText
        android:id="@+id/add_note_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_note_end_date"
        android:inputType="textPersonName"
        android:hint="@string/friends" />

    <Button
        android:id="@+id/add_note_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_note_friends"
        android:text="@string/add_event" />
</RelativeLayout>